Cria diretório /ui para projeto Angular

--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,19 @@
-target/
-pom.xml.tag
-pom.xml.releaseBackup
+.*
+!.gitignore
+target
+*.class
+*.jar
+*.log
 pom.xml.versionsBackup
-pom.xml.next
+.project
+.classpath
+.settings 
+.vscode
+.idea
+target
+node_modules
+webapp
+dist
+tmp
+maven-release*
 release.properties
-dependency-reduced-pom.xml
-buildNumber.properties
-.mvn/timing.properties
-# https://github.com/takari/maven-wrapper#usage-without-binary-jar
-.mvn/wrapper/maven-wrapper.jar
