--- a/ui/package.json
+++ b/ui/package.json
@@ -11,7 +11,7 @@
         "dev": "concurrently \"npm:dev-*\" -k",
         "build-madoc-ui": "ng build --prod madoc-ui",
         "build-madoc-extras": "ng build --prod madoc-extras",
-        "build": "concurrently \"npm:build-*\" -k",
+        "lib": "concurrently \"npm:build-*\"",
         "test-madoc-ui": "ng test madoc-ui --watch=false --code-coverage",
         "pack-madoc-ui": "cd dist/madoc-ui && npm pack",
         "pack-madoc-extras": "cd dist/madoc-extras && npm pack",
