--- a/madoc-engine/pom.xml
+++ b/madoc-engine/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>br.gov.lexml.madoc</groupId>
 		<artifactId>madoc-dominio</artifactId>
-		<version>0.0.1-SNAPSHOT</version>
+		<version>0.0.1</version>
 		<relativePath>../pom.xml</relativePath>
 	</parent>
 	<artifactId>madoc-engine</artifactId>
