--- a/madoc-editor/pom.xml
+++ b/madoc-editor/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>br.gov.lexml.madoc</groupId>
 		<artifactId>madoc-dominio</artifactId>
-		<version>0.0.1</version>
+		<version>0.0.2-SNAPSHOT</version>
 		<relativePath>../pom.xml</relativePath>
 	</parent>
 	<artifactId>madoc-editor</artifactId>
