--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 	</parent>
 	<groupId>br.gov.lexml.madoc</groupId>
 	<artifactId>madoc-dominio</artifactId>
-	<version>0.0.1</version>
+	<version>0.0.2-SNAPSHOT</version>
 	<packaging>pom</packaging>
 	<name>madoc</name>
 	<description>POM Principal do domínio Madoc (Montador Automático de Documentos)</description>
@@ -19,7 +19,7 @@
 		<connection>scm:git:https://github.com/lexedit/madoc.git</connection>
 		<developerConnection>scm:git:https://github.com/lexedit/madoc.git</developerConnection>
 		<url>https://github.com/lexedit/madoc</url>
-		<tag>0.0.1</tag>
+		<tag>HEAD</tag>
 	</scm>
 
 	<repositories>
