atualizando documentação e scripts

--- a/ui/package.json
+++ b/ui/package.json
@@ -2,24 +2,22 @@
     "name": "madoc-app",
     "version": "0.0.1",
     "scripts": {
-        "start": "concurrently \"npm:dev-*\" \"npm:app\" \"npm:server\" -k",
-        "client": "concurrently \"npm:dev-*\" \"npm:app\" -k",
-        "lint": "ng lint",
+        "start": "concurrently \"npm:dev\" \"npm:app\" -k",
         "app": "ng serve --proxy-config proxy.conf.json",
-        "server": "cd .. && cd madoc-editor && mvn exec:java",
         "dev-madoc-ui": "ng build madoc-ui --watch",
         "dev-madoc-extras": "ng build madoc-extras --watch",
         "dev": "concurrently \"npm:dev-*\" -k",
         "build-madoc-ui": "ng build --prod madoc-ui",
         "build-madoc-extras": "ng build --prod madoc-extras",
         "lib": "concurrently \"npm:build-*\"",
+        "build-app": "lib && ng build madoc-app --prod",
         "test-madoc-ui": "ng test madoc-ui --watch=false --code-coverage",
-        "pack-madoc-ui": "cd dist/madoc-ui && npm pack",
-        "pack-madoc-extras": "cd dist/madoc-extras && npm pack",
-        "package-madoc-ui": "npm run build-madoc-ui && npm run pack-madoc-ui",
-        "package-madoc-extras": "npm run build-madoc-extras && npm run pack-madoc-extras",
-        "publish-madoc-ui": "npm publish ./dist/madoc-ui/lexml-madoc-ui*.tgz",
-        "publish-madoc-extras": "npm publish ./dist/madoc-extras/lexml-madoc-extras*.tgz",
+        "pack-madoc-ui": "cd dist/madoc-ui && npm:pack",
+        "pack-madoc-extras": "cd dist/madoc-extras && npm:pack",
+        "package-madoc-ui": "npm:build-madoc-ui && npm:pack-madoc-ui",
+        "package-madoc-extras": "npm:build-madoc-extras && npm:pack-madoc-extras",
+        "publish-madoc-ui": "npm:publish ./dist/madoc-ui/lexml-madoc-ui*.tgz",
+        "publish-madoc-extras": "npm:publish ./dist/madoc-extras/lexml-madoc-extras*.tgz",
         "postinstall": "ngcc"
     },
     "private": true,
