fechando uma versão para teste da Câmara

--- a/ui/package.json
+++ b/ui/package.json
@@ -9,8 +9,8 @@
         "dev": "concurrently \"npm:dev-*\" -k",
         "build-madoc-ui": "ng build --prod madoc-ui",
         "build-madoc-extras": "ng build --prod madoc-extras",
-        "lib": "concurrently \"npm:build-*\"",
-        "build-app": "lib && ng build madoc-app --prod",
+        "lib": "concurrently \"npm:build-madoc-ui\" \"npm:build-madoc-extras\"",
+        "build-app": "ng build madoc-app --prod",
         "test-madoc-ui": "ng test madoc-ui --watch=false --code-coverage",
         "pack-madoc-ui": "cd dist/madoc-ui && npm:pack",
         "pack-madoc-extras": "cd dist/madoc-extras && npm:pack",
