--- a/ui/package.json
+++ b/ui/package.json
@@ -12,12 +12,12 @@
         "lib": "concurrently \"npm:build-madoc-ui\" \"npm:build-madoc-extras\"",
         "build-app": "ng build madoc-app --prod",
         "test-madoc-ui": "ng test madoc-ui --watch=false --code-coverage",
-        "pack-madoc-ui": "cd dist/madoc-ui && npm:pack",
-        "pack-madoc-extras": "cd dist/madoc-extras && npm:pack",
-        "package-madoc-ui": "npm:build-madoc-ui && npm:pack-madoc-ui",
-        "package-madoc-extras": "npm:build-madoc-extras && npm:pack-madoc-extras",
-        "publish-madoc-ui": "npm:publish ./dist/madoc-ui/lexml-madoc-ui*.tgz",
-        "publish-madoc-extras": "npm:publish ./dist/madoc-extras/lexml-madoc-extras*.tgz",
+        "pack-madoc-ui": "cd dist/madoc-ui && npm pack",
+        "pack-madoc-extras": "cd dist/madoc-extras && npm pack",
+        "package-madoc-ui": "npm run build-madoc-ui && npm run pack-madoc-ui",
+        "package-madoc-extras": "npm run build-madoc-extras && npm run pack-madoc-extras",
+        "publish-madoc-ui": "npm run publish ./dist/madoc-ui/lexml-madoc-ui*.tgz",
+        "publish-madoc-extras": "npm run publish ./dist/madoc-extras/lexml-madoc-extras*.tgz",
         "postinstall": "ngcc"
     },
     "private": true,
