--- a/ui/projects/madoc-ui/package.json
+++ b/ui/projects/madoc-ui/package.json
@@ -1,8 +1,8 @@
 {
   "name": "@lexml/madoc-ui",
-  "version": "0.0.4",
+  "version": "0.0.5",
   "publishConfig": {
-    "registry": "https://api.bintray.com/npm/lexml/npm/"
+    "registry": "https://registry.npmjs.org/"
   },
   "peerDependencies": {
     "@angular/common": "^10.0.0",
