Configura restart automático da aplicação após modificação de modelo

--- a/madoc-editor/src/main/resources/application.properties
+++ b/madoc-editor/src/main/resources/application.properties
@@ -2,6 +2,8 @@
 # Contexto da aplicação
 server.servlet.context-path=/madoc
 
+spring.devtools.restart.additional-paths=./modelos
+
 # Diretórios (valores default)
 #madoc.editor.path.modelos=./modelos
 #madoc.editor.path.dados=./dados
